[package]
name = "grind"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/AnharHussainMiah/grind"
homepage = "https://github.com/AnharHussainMiah/grind"
description = "A simple, modern, build tool to improve the developer experience of starting new Java projects."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.11", features = [
  "json",
  "gzip",
  "stream",
  "rustls-tls",
], default-features = false }
serde_json = "1.0"
serde-xml-rs = "0.5"
urlencoding = "2.1.3"
regex = "1.11.3"
serde_path_to_error = "0.1.20"
quick-xml = { version = "0.38.3", features = ["serialize"] }
md5 = "0.8.0"
walkdir = "2.5.0"
zip = "6.0.0"
chrono = "0.4.42"
futures-util = "0.3.31"
flate2 = "1.1.5"
tar = "0.4.44"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
